--- a/css/style.css
+++ b/css/style.css
@@ -298,3 +298,31 @@ ul {
   margin-bottom: 15px;
   font-size: 18px;
 }
+.window {
+  height: 100vh;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;  
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  display: flex;
+  transform:  scale(0);
+  transition: 0.5s;
+}
+.window__form {
+  max-width: 400px;
+  width: 100%;
+  height: 500px;
+  background: #fff;
+  border-radius: 5px;
+  padding: 20px;
+  font-size: 30px;
+}
+
+.window:target {
+  /* display: flex; */
+  transform:  scale(1);
+}
